# tmux_for_agents

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  hook.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/assets/: demo-snapshot.py  make-screenshot.sh
docs/superpowers/plans/: 2026-07-07-tfa-m1-skeleton.md  2026-07-07-tfa-m2-resource-metrics.md  2026-07-08-tfa-m3-quota-notifications.md  2026-07-11-tfa-tui.md  2026-07-13-tfa-real-quota.md
docs/superpowers/specs/: 2026-07-07-tmux-agent-observability-design.md  2026-07-08-tfa-m3-quota-notifications-design.md  2026-07-10-tfa-tui-design.md  2026-07-13-tfa-real-quota-design.md
fixtures/: oauth_usage.json
hooks/: hooks.json
src/: client.rs  config.rs  event.rs  main.rs  paths.rs  protocol.rs  render.rs  state.rs
src/commands/: hook.rs  mod.rs  notify.rs  status.rs  tui.rs
src/daemon/: lifecycle.rs  mod.rs  server.rs
src/notify/: channels.rs  discipline.rs  mod.rs
src/quota/: burn.rs  mod.rs  real.rs
src/scanner/: mod.rs  procs.rs
src/sources/: claude_jsonl.rs  codex_db.rs  mod.rs
src/tui/: i18n.rs  mod.rs  model.rs  nav.rs  poll.rs  view.rs
tests/: cli.rs  daemon_lifecycle.rs  daemon_socket.rs  docs_consistency.rs  e2e.rs  hook_cmd.rs  no_async_gate.rs  notify_cmd.rs  notify_e2e.rs  quota_real_e2e.rs  scanner_e2e.rs  tui_e2e.rs
