[package]
name = "tfa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fd-lock = "4"
libc = "0.2"
anyhow = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
